--- a/weaver.ini
+++ b/weaver.ini
@@ -1,3 +1,3 @@
 [@Author::PERLANCAR]
 [-Bencher::Scenario]
-sample_bench={args=>[exclude_dataset_names=>['100']]}
+sample_bench={args=>{exclude_dataset_names=>['100']}}
